--- a/styles/global.css
+++ b/styles/global.css
@@ -2,12 +2,14 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  
 }
 
 body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  
 }
 
 h1,
@@ -20,9 +22,12 @@ p,
 ul,
 ol,
 li,
-blockquote {
+blockquote,
+address
+{
   margin: 0;
   padding: 0;
+  
 }
 
 a {
