--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,311 @@
-/* место для вашего кода */
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: normal;
+    width: 1052px;
+    margin: 92px 24px 86px;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 32px;
+    margin-top: 10px;
+    margin-right: 38px;
+    list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+    list-style-type: none;
+}
+
+
+.header__logo-image {
+    width: 148px;
+    height: 105px;
+    margin-top: 10px;
+    margin-right: 184px;
+}
+
+.header__address {
+    line-height: 24.3px;
+    list-style-type: none;
+    width: 240px;
+}
+
+.address__container {
+    font-style: normal;
+
+}
+
+.link__border-bottom {
+    text-decoration: none;
+    border-bottom: 1px solid black;
+}
+
+.cover {
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 100%;
+}
+
+.overlay {
+    background-color: rgb(0 0 0 / 0.5);
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.cover__title { 
+    padding-top: 165px;
+    color: #FFF;
+    font-size: 100px;
+    line-height: 115%; 
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 3;
+}
+
+.aligned-text {
+    padding-left: 50px;
+}
+
+.aligned-text_center {
+    display: block;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.aligned-text_right {
+    display: block;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.letter-spacing_unextended {
+    letter-spacing: 30px;
+}
+
+.letter-spacing_extended {
+    letter-spacing: 60px;
+}
+
+.cover__description {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    padding: 135px 50px 51px 78px;
+    z-index: 3;
+}
+
+.cover__description-text {
+    color: #ffffff;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    word-spacing: 18px;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.bet-button {
+    padding-top: 12px;
+    padding-bottom: 8px;
+    border: 1px solid #ffffff;
+    color: #ffffff;
+    background-color: transparent;
+    text-align: center;
+    font-size: 22px;
+    text-transform: uppercase;
+    width: 256px;
+} 
+
+.lots {
+    margin-top: 179px;
+    margin-bottom: 146px;
+}
+
+.lots__heading {
+    font-size: 40px;
+    text-transform: uppercase;  
+    margin-left: 63px;
+    margin-bottom: 27px;
+}
+
+.lots__card-list {
+    list-style-type: none;
+    display: flex;
+    padding-left: 24px;
+    padding-right: 24px;
+    gap: 25px;  
+}
+
+.lots__card-list-item {
+    flex-grow: 1;
+    width: 334px;
+    min-height: 563px;
+    position: relative;   
+}
+
+.card-link {
+    display: block;
+    text-decoration: none;
+    height: 100%;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    padding: 51px 40px 48px;
+    height: 100%;    
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-position: center;
+    gap: 238px;
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-position: center;
+    gap: 95px;
+}
+
+.card__title {
+    color: #FFF;
+    font-size: 22px;
+    line-height: 120%; 
+    text-decoration-line: underline;
+    text-transform: uppercase; 
+    position: relative;
+    z-index: 2;
+}
+
+.card__text {
+    color: #FFF;
+    font-size: 20px;
+    line-height: 120%;
+    position: relative;
+    z-index: 2;
+}
+
+.lots__look-more-link {
+    padding-top: 30px;
+    padding-left: 63px;
+    font-size: 20px;
+    
+}
+
+.about {
+    width: 1052px;
+    margin-left: 24px;
+    margin-right: 24px;
+    display: grid;
+    grid-template-columns: 359px 693px;
+}
+
+.about__logo {
+    margin: 35px 765px 320px 47px;
+    background-image: url(../images/Ellipse\ 10.svg);
+    width: 240px;
+    height: 240px;
+    
+}
+
+.about__logo-image {
+    margin: 64px 46px 62px 47px;
+    width: 148px;
+    height: 114px;
+}
+
+.about__column {
+    width: 693px; 
+    margin-top: 133px;
+    
+}
+
+.about__title {
+    margin-bottom: 100px;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.about__text {
+    margin-top: 24px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.3px;
+}
+
+.about__letter-spacing-first {
+    letter-spacing: 0.2px;
+}
+
+.about__letter-spacing-second {
+    letter-spacing: 0.3px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1000px;
+    margin: 180px 50px 88px;
+}
+
+.footer__address {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.footer__menu {
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    margin-left: 30px;
+}
+
+.footer__menu-list {
+    list-style-type: none;
+
+}
+
+.footer__social-list {
+    display: flex;
+    gap: 48px;
+    list-style-type: none;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+} 
+
+
+
+
