--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,44 @@
 .header {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 392px 290px 242px;
+    justify-content: space-between;
     align-items: center;
-    font-size: 18px;
+    font-size: 18px; 
     font-weight: 400;
     line-height: normal;
     width: 1052px;
-    margin: 92px 24px 86px;
+    margin: 92px 24px 90px;
+    padding-left: 27px;
+    padding-right: 21px;
 }
 
 .header__links-list {
     display: flex;
+    width: 391px;
     gap: 32px;
-    margin-top: 10px;
-    margin-right: 38px;
     list-style: circle;
 }
 
-.header__links-list-item_no-bullit {
+.links-list-item_no-bullit {
     list-style-type: none;
+    text-decoration: none;
 }
 
 
 .header__logo-image {
     width: 148px;
     height: 105px;
-    margin-top: 10px;
-    margin-right: 184px;
 }
 
-.header__address {
+.address {
+    font-size: 18px; 
     line-height: 24.3px;
     list-style-type: none;
-    width: 240px;
-}
-
-.address__container {
+    width: 241px;
     font-style: normal;
-
 }
 
-.link__border-bottom {
+.link {
     text-decoration: none;
     border-bottom: 1px solid black;
 }
@@ -54,7 +52,7 @@
 }
 
 .overlay {
-    background-color: rgb(0 0 0 / 0.5);
+    background-color: rgb(0 0 0 / 0.6);
     position: absolute;
     z-index: 2;
     width: 100%;
@@ -67,27 +65,35 @@
     padding-top: 165px;
     color: #FFF;
     font-size: 100px;
-    line-height: 115%; 
     font-weight: 700;
     text-transform: uppercase;
     position: relative;
     z-index: 3;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.cover__title:first-child {
+    margin-top: 0;
 }
 
 .aligned-text {
-    padding-left: 50px;
+    line-height: 115%;
+    margin-top: 20px;
 }
 
 .aligned-text_center {
     display: block;
     text-align: center;
-    margin-top: 15px;
+    line-height: 100%;
+    margin-top: 20px;
 }
 
 .aligned-text_right {
     display: block;
     text-align: right;
-    padding-right: 20px;
+    line-height: 100%;
+    margin-top: 20px;
 }
 
 .letter-spacing_unextended {
@@ -121,8 +127,8 @@
 .bet-button {
     padding-top: 12px;
     padding-bottom: 8px;
-    border: 1px solid #ffffff;
     color: #ffffff;
+    border: 1px solid currentColor;
     background-color: transparent;
     text-align: center;
     font-size: 22px;
@@ -145,6 +151,7 @@
 .lots__card-list {
     list-style-type: none;
     display: flex;
+    flex-wrap: 1;
     padding-left: 24px;
     padding-right: 24px;
     gap: 25px;  
@@ -166,28 +173,24 @@
 .card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 51px 40px 48px;
-    height: 100%;    
+    height: 100%;  
+    background-size: cover;
+    background-position: center;  
 }
 
 .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-    background-size: cover;
-    background-position: center;
-    gap: 238px;
 }
 
 .card_type_book {
     background-image: url(../images/card-lot-02.jpg);
-    background-size: cover;
-    background-position: center;
+    
 }
 
 .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-    background-size: cover;
-    background-position: center;
-    gap: 95px;
 }
 
 .card__title {
@@ -209,6 +212,7 @@
 }
 
 .lots__look-more-link {
+    display: block;
     padding-top: 30px;
     padding-left: 63px;
     font-size: 20px;
@@ -217,17 +221,17 @@
 
 .about {
     width: 1052px;
-    margin-left: 24px;
-    margin-right: 24px;
+    padding: 0 24px;
     display: grid;
     grid-template-columns: 359px 693px;
 }
 
 .about__logo {
     margin: 35px 765px 320px 47px;
-    background-image: url(../images/Ellipse\ 10.svg);
     width: 240px;
     height: 240px;
+    background-color: black;
+    border-radius: 50%;
     
 }
 
@@ -258,27 +262,16 @@
     line-height: 24.3px;
 }
 
-.about__letter-spacing-first {
+.about__letter-spacing {
     letter-spacing: 0.2px;
 }
 
-.about__letter-spacing-second {
-    letter-spacing: 0.3px;
-}
-
 .footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 241px 149px 240px;
+    gap: 185px;
     width: 1000px;
     margin: 180px 50px 88px;
-}
-
-.footer__address {
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
 }
 
 .footer__menu {
@@ -287,7 +280,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
-    margin-left: 30px;
 }
 
 .footer__menu-list {
