--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,18 @@
 .header {
-    background-color: blue;
-    display: grid;
-    grid-template-columns: 1fr min-content 1fr;
-    align-items: center;
-    padding-left: 24px;
-    padding-right: 26px;
-    margin: 92px 24px 90px;
-    font-size: 18px; 
-    font-weight: 400;
-    line-height: normal;
-    /* display: grid;
-    grid-template-columns: 1fr min-content 1fr;
-    align-items: center;
-    font-size: 18px; 
-    font-weight: 400;
-    line-height: normal;
-    width: 1052px;
-    margin: 92px 24px 90px; */
-}
+    display: grid; 
+    grid-template-columns: 1fr min-content 1fr; 
+    align-items: center; 
+    font-size: 18px;  
+    font-weight: 400; 
+    line-height: normal; 
+    width: 1052px; 
+    margin: 92px 24px 90px; 
+    padding-left: 27px; 
+    padding-right: 21px; 
+
+} 
 
 .header__links-list {
-    position: relative;
-    left: 5px;
-    background-color: aquamarine;
     display: flex;
     width: 391px;
     gap: 32px;
@@ -45,15 +35,12 @@
 
 
 .header__logo-image {
-    background-color: deeppink;
     width: 148px;
     height: 105px;
 }
 
 .address {
-    position: relative;
-    left: 185px;
-    background-color: chocolate;
+    justify-self: end;
     font-size: 18px; 
     line-height: 24.3px;
     width: 241px;
@@ -138,7 +125,6 @@
     font-weight: 400;
     line-height: 28px;
     word-spacing: 18px;
-    font-size: 22px;
     text-transform: uppercase;
 }
 
